# serializer version: 1
# name: test_streamk_pap_cluster_multicast_gfx1250_golden[cs2_ck2]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_F4SS_MXAE8B32_MXBE8B32_BH_UserArgRKuSkjre5kq5ej17gKFHNYqsWrDBU9nEKeRl-tfRTnM=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F4SS_MXAE8B32_MXBE8B32_BH_UserArgu5D_yQNbPL9RAjbLKIhtN3pMbdreMC870rJD9b5-xHY=',
      'err': 0,
    }),
  ])
# ---
# name: test_streamk_pap_cluster_multicast_gfx1250_golden[cs4_ck1]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_F4SS_MXAE8B32_MXBE8B32_BH_UserArg99SNkeTYmhvqUbnvZfGVZBvkx3yJhTvo4AZaN7n-ZJk=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F4SS_MXAE8B32_MXBE8B32_BH_UserArge46yGfC3vxV9JewYE75PVd0IDu00pJsOdIkULpr5vu0=',
      'err': 0,
    }),
  ])
# ---
